Resolve jumpy glitch in Safari

--- a/styles/mobile/common.less
+++ b/styles/mobile/common.less
@@ -695,6 +695,7 @@
 
 .km-virtual-list > li {
     width: 100%;
+    -webkit-transform: translatez(0);
     position: absolute;
     top: 0;
 }
